--- a/index.html
+++ b/index.html
@@ -1,4 +1,160 @@
-<ul>
-  <li><a href="./The%20Binomial%20Family/index.html">The Binomial Family</a></li>
-  <li><a href="./Modeling%20Probability/index.html">Modeling Probability</a></li>
-</ul>
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta charset="utf-8" />
+		<link rel="stylesheet" type="text/css" href="css/style.css" />
+		<title>The Beta Family</title>
+	</head>
+<body>
+<h1>The Beta Family</h1>
+
+<h2>Beta Distribution</h2>
+
+<h4>Support</h4>
+
+$ 0 < x < 1$
+<h4>Parameters</h4>
+
+$\alpha > 0\\
+\beta > 0$
+<h4>PDF</h4>
+
+$\begin{equation}\begin{split}\displaystyle
+Beta(x | \alpha , \beta) &= \frac{x^{\alpha -1} (1-x)^{\beta-1}}{B(\alpha, \beta)}\\
+B(\alpha, \beta) &= \frac{\Gamma(\alpha) \Gamma(\beta)}{\Gamma(\alpha + \beta)}\\
+\Gamma(z) &= \int_0^\infty x^{z-1} e^{-x} dx \forall z \in \mathbb{C}, Real(z) > 0
+\end{split}\end{equation}$
+<p>An important property of the $\Gamma$ function is</p>
+
+$\Gamma(\alpha+1)=\alpha \Gamma(\alpha)$
+<p>Also note that since </p>
+
+$\begin{equation}\begin{split}\displaystyle
+1&=\int_0^1 Beta(x|\alpha, \beta)\\
+B(\alpha, \beta) &= \int_0^1 x^{\alpha-1}(1-x)^{\beta-1}
+\end{split}\end{equation}$
+
+<h4>Expected Value</h4>
+
+<p>Given that $X\sim Beta(\alpha , \beta) $</p>
+
+<p>Solve for expected value</p>
+
+$\begin{equation}\begin{split}\displaystyle
+&\text{Write definition}\\
+\mathbb{E}[X]
+&= \int_0^1 \frac{x^{\alpha} (1-x)^{\beta-1}}{B(\alpha, \beta)}\\
+&\text{Rewrite using beta function}\\
+&= \frac{B(\alpha+1,\beta)}{B(\alpha,\beta)}\\
+&\text{Rewrite using gamma function & simplify}\\
+&= \frac{\Gamma(\alpha+1)\Gamma(\alpha+\beta)}{\Gamma(\alpha+\beta+1)\Gamma(\alpha)}\\
+&\text{Use gamma property to simplify}\\
+&= \frac{\alpha}{\alpha+\beta}
+\end{split}\end{equation}$
+<h4>Variance</h4>
+
+<p>Solve for $\mathbb{E}[X^2]$</p>
+
+$\begin{equation}\begin{split}\displaystyle
+&\text{Write definition}\\
+\mathbb{E}[X^2] 
+&= \int_0^1 \frac{x^{\alpha+1} (1-x)^{\beta-1}}{B(\alpha, \beta)}\\
+&\text{Rewrite using beta function}\\
+&= \frac{B(\alpha+2,\beta)}{B(\alpha,\beta)}\\
+&\text{Rewrite using gamma function & simplify}\\
+&= \frac{\Gamma(\alpha+2)\Gamma(\alpha+\beta)}{\Gamma(\alpha+\beta+1)\Gamma(\alpha)}\\
+&\text{Use gamma property to simplify}\\
+&= \frac{\alpha^2+\alpha}{(\alpha+\beta)(\alpha+\beta+1)}
+\end{split}\end{equation}$
+<p>Solve for $\mathbb{V}ar[X]$</p>
+
+$\begin{equation}\begin{split}\displaystyle
+\mathbb{V}ar[X] 
+&= \mathbb{E}[X^2] -  \mathbb{E}[X]^2\\
+&= \frac{\alpha^2+\alpha}{(\alpha+\beta)(\alpha+\beta+1)}-\frac{\alpha^2}{(\alpha+\beta)^2}\\
+&= \frac{\alpha\beta}{(\alpha+\beta)^2(\alpha+\beta+1)}
+\end{split}\end{equation}$
+<h2>Dirichlet Distribution</h2>
+
+<p>Multidimensional extension of the Beta distribution. </p>
+
+<h4>Support</h4>
+
+$0 < x_i < 1, \forall i \in \{0,\cdots,m\}\\
+m \in \{1,2,\cdots\}\\
+\sum_{i=1}^m x_i = 1$
+<h4>Parameters</h4>
+
+$\alpha_i > 0, \forall i \in \{1,\dots, m\}$
+<p>Let $A = \sum_{i=1}^m \alpha_i$</p>
+
+<h4>PDF</h4>
+
+$\begin{equation}\begin{split}\displaystyle
+Dir_m({\bf x} | \boldsymbol{\alpha})
+&= \frac{1}{B(\boldsymbol{\alpha})} \prod_{i=1}^m x_i^{\alpha_i-1}\\
+&= \frac{{\bf x}^{\boldsymbol{\alpha}-\vec{1}}}{B(\boldsymbol{\alpha})}\\
+\end{split}\end{equation}$
+<p>Where</p>
+
+$\begin{equation}\begin{split}\displaystyle
+B(\boldsymbol{\alpha})
+&= B(\alpha_1,\cdots,\alpha_m)\\
+&= \frac{1}{\Gamma(A)} \prod_{i=1}^M \Gamma(\alpha_i)
+\end{split}\end{equation}$
+<p>The marginals of the Dirichlet distribution are Beta distributions.</p>
+
+<p>Claim $X_i \sim Beta(\alpha_i, A-\alpha_i)$</p>
+
+$\begin{equation}\begin{split}\displaystyle
+&\text{Law of total probability}\\
+P(x_1,\cdots,x_m)
+&=P(x_i)P(x_1, \cdots, x_{i-1},x_{i+1}, \cdots, x_m | x_i)\\
+&\text{Expand based on claim}\\
+&=\frac{x_i^{\alpha_i-1}(1-x_i)^{A-\alpha_i-1}\Gamma(A)}{\Gamma(\alpha_i)\Gamma(A-\alpha_i)} \prod_{j=1\\j\neq i}^m \frac{x_j^{\alpha_j-1}\Gamma(A-\alpha_i)}{\Gamma(\alpha_j)(1-x_i)^{A-\alpha_i-1}}\\
+&\text{Simplify}\\
+&= \prod_{j=1}^m \frac{x_i^{\alpha_i-1} \Gamma(A)}{\Gamma(\alpha_i)}\\
+&\text{Verify to verify original distribution}\\
+&= \frac{{\bf x}^{\boldsymbol{\alpha}-\vec{1}}}{B(\boldsymbol{\alpha})}
+\end{split}\end{equation}$
+<h4>Expected Value</h4>
+
+<p>From marginals $\mathbb{E}[X_i]=\frac{\alpha_i}{A}$. So $\mathbb{E}[Dir_m(\boldsymbol{\alpha})] = \frac{\boldsymbol{\alpha}}{A}$</p>
+
+<h4>Variance</h4>
+
+<p>Variance</p>
+
+$\mathbb{V}ar[X_i]=\frac{\alpha_i (A-\alpha_i)}{A(A+1)}$
+<p>Solve for $\mathbb{E}[X_i X_j]$</p>
+
+$\begin{equation}\begin{split}\displaystyle
+&\text{Write definition}\\
+\mathbb{E}[X_i X_j]
+&= \int_0^1 \int_0^{1-x_i} x_i x_j P(x_i , x_j ) dx_j dx_i\\
+&\text{Expand definition}\\
+&= \int_0^1 \int_0^{1-x_i} \frac{x_i^{\alpha_i} x_j^{\alpha_j} (1-x_i - x_j)^{A-\alpha_i-\alpha_j}}{B(\alpha_i, \alpha_j, A-\alpha_i-\alpha_j)} dx_j dx_i\\
+&\text{Rewrite using $B$ function}\\
+&= \frac{B(\alpha_i+1, \alpha_j+1,A-\alpha_i -\alpha_j)}{B(\alpha_i, \alpha_j, A-\alpha_i-\alpha_j)}\\
+&\text{Simplify}\\
+&= \frac{\alpha_i \alpha_j}{A(A+1)}\\
+\end{split}\end{equation}$
+<p>Solve for $\mathbb{C}ov[X_i, X_j]$</p>
+
+$\begin{equation}\begin{split}\displaystyle
+&\text{Write definition}\\
+\mathbb{C}ov[X_i, X_j]
+&= \mathbb{E}[X_i X_j] - \mathbb{E}[X_i]\mathbb{E}[X_j]\\
+&\text{Expand definition}\\
+&= \frac{\alpha_i \alpha_j}{A(A+1)} - \frac{\alpha_i \alpha_j}{A^2}\\
+&\text{Simplify}\\
+&= - \frac{\alpha_i \alpha_j}{A(A+1)w}
+\end{split}\end{equation}$
+<hr />
+
+<script type="text/x-mathjax-config">MathJax.Hub.Config({tex2jax: {inlineMath:[['$','$']]}});</script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=default' async></script>
+</body>
+</html>
+
